# lazy-ai-primer

./: README.md
assets/commands/: bug.fix.md  code.refactor.md  code.review.md  design-review.md  explain.code.md  generate-commit-message.md  generate.api.test.md  generate.comments.md  generate.test.case.md  generate.unit.test.md  go.code.review.md  go.explain.code.md  go.generate.unit.test.md  go.write.code.md  make.test.plan.md  summarize.code.md  write.code.md  write.design.md  write.user.story.md
assets/rules/: design.mdc  security.mdc
book/: Makefile  requirements.txt
book/source/: appendix_a.md  appendix_b.md  chapter01.md  chapter02.md  chapter03.md  chapter04.md  chapter05.md  chapter06.md  chapter07.md  chapter08.md  chapter09.md  chapter10.md  chapter11.md  chapter12.md  chapter13.md  chapter14.md  chapter15.md  chapter16.md  chapter17.md  chapter18.md  chapter19.md  chapter20.md  chapter21.md  chapter22.md  chapter23.md  chapter24.md  chapter25.md  chapter26.md  chapter27.md  chapter28.md  chapter29.md  chapter30.md  conf.py  (+1 more)
example/: talk.json  talk.srt  talk.tsv  talk.txt  talk.vtt  whisper_asr.py
example/academic_url_agent/: .env.example  BUGFIX.md  CHANGELOG.md  FEATURES.md  INSTALL.md  PROJECT_SUMMARY.md  QUICKSTART.md  REPORT_EXAMPLE.md  RFC_SUPPORT.md  START_HERE.md  USAGE.md  mindmap.puml  option2.md  option3.md  option4.md  pyproject.toml  report.md  test_extraction.py  test_markdown.py  test_rfc.py  test_setup.py  verify_fix.md
example/academic_url_agent/src/academic_url_agent/: __init__.py  graph.py  main.py  pipeline.py  tools.py
(+226 files in other folders)
